syntax = "proto3";
package pb;
option go_package = "pb/;pb";

import "user.proto";
import "google/api/annotations.proto";

service UserService {
    rpc Login (LoginRequest) returns (LoginResponse){
        option (google.api.http) = {
            post: "/v1/user/login"
            body: "*"
        };
    };

    rpc Register(RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/v1/user/register"
            body: "*"
        };
    };
    rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse){
        option (google.api.http) = {
            get: "/v1/user/{user_id}"
        };
    };
}